# mx

./: .gitignore  .mock-run-22524820956  .mock-run-22541757239  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  astm.toml  justfile  mise.toml  rust-toolchain.toml
.codex/: AGENTS.md
.github/: copilot-instructions.md
.github/scripts/: jules-delete-processed-issue-and-events.sh  jules-generate-decider-matrix.sh  jules-generate-observer-matrix.sh  jules-generate-routing-matrices.sh  jules-generate-workstream-matrix.sh  jules-run-deciders-sequential.sh  jules-run-implementers-sequential.sh  jules-run-observers-sequential.sh  jules-run-planners-sequential.sh
.github/workflows/: astm-automerge.yml  astm-doctors.yml  astm-implementer.yml  astm-innovators.yml  astm-integrator.yml  astm-optimizers.yml  astm-organization.yml  astm-planner.yml  astm-pr-metadata.yml  astm-specialists.yml  build.yml  ci-workflows.yml  collect-coverage.yml  jules-automerge.yml  jules-implementer-label.yml  jules-implementer-pr.yml  jules-implementer-review.yml  jules-innovators.yml  jules-integrator-pr.yml  jules-integrator.yml  jules-run-implementer.yml  (+9 more)
.jlo/: config.toml
.jules/: .jlo-managed.yml  JULES.md  README.md  config.toml  github-labels.json
.mix/: revised_tasks.md
docs/: cli-usage.md  configuration.md  development-guide.md
src/: commands.rs  error.rs  lib.rs  main.rs  storage.rs
tests/: cli_clean.rs  cli_command.rs  cli_commands.rs  cli_copy.rs  cli_flow.rs  cli_touch.rs  cli_touch_paste.rs  commands_api.rs  commands_core.rs  context.rs  security.rs  snippets.rs
(+514 files in other folders)
